# lectures

./: foo.py  pyproject.toml
computer-vision/p1_Homography/: homography_my_data.ipynb  homography_with_my_data.ipynb  my_work.ipynb  my_work_pre.ipynb
computer-vision/p1_Homography/my_data/: gangnam_points.txt  microwave_rect.txt  microwave_window.txt
computer-vision/p2_ImageFiltering/: CV_p2_ImageFiltering.ipynb  p2_my_work.ipynb
johogakutenbou-2/: 情報学の展望.md
pattern-recog-adv/: Regression-task.ipynb  Regression.ipynb  Regression2.ipynb
pattern-recog-adv/nishino/: Regression.ipynb  Regression2.ipynb
pattern-recog-adv/nobuhara/: PCA_my-work.ipynb  PR-PCA.ipynb  my_normal-random.ipynb  normal_random.ipynb
pattern-recog-adv/yoshii/: EM.py  VB.py  z.csv
reinforcement/: QLearning.py  QLearning2.py  TD.py  TD2.py  field.txt  field2.txt  report.md
