[tool.poetry]
name = "lectures"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^6.4.11"
pandas = "^1.4.2"
kaggle = "^1.5.12"
matplotlib = "^3.5.1"
opencv-python = "^4.5.5"

[tool.poetry.dev-dependencies]
numpy = "^1.22.3"
jupyter = "^1.0.0"
pandas = "^1.4.2"
black = "^22.3.0"
mypy = "^0.942"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
